@@ -288,6 +288,8 @@ module Psych
           quote = false
         elsif o =~ /\n/
           style = Nodes::Scalar::LITERAL
+        elsif o =~ /^\W/
+          style = Nodes::Scalar::DOUBLE_QUOTED
         else
           unless String === @ss.tokenize(o)
             style = Nodes::Scalar::SINGLE_QUOTED
